# SCPA

./: .gitignore  CMakeLists.txt  README.md  main.c  make.sh  matrixPreProcessing.c  mmio.c  run.sh  valgrind.sh
header/: matrixPreProcessing.h
src/: main.c
src/cuda/: CMakeLists.txt  Utils.cu  computeCUDA.cu  computeCuda.cu  cudaCSR.cu  cudaHLL.cu  cudaUtils.cu
src/cuda/product/: CSR.cu  HLL.cu  Serial.cu
src/include/: checkResultVector.h  computeCUDA.cuh  computeCuda.cuh  computeOpenMP.h  constants.h  createVector.h  createVectorUtil.h  cudaCSR.cuh  cudaHLL.cuh  cudaUtils.cuh  fileUtils.h  flops.h  matricDealloc.h  matrixBalance.h  matrixFree.h  matrixPreProcessing.h  matrixPrint.h  mmio.h  mtxBalance.h  mtxFree.h  mtxPrint.h  mtxStructs.h  openmpCSR.h  openmpHLL.h  openmpProduct.h  performance.h  preprocessing.h  result.h  serialProduct.h  utilsProduct.h
src/include/cuda/: CSR.cuh  HLL.cuh  Serial.cuh  Utils.cuh  computeCUDA.cuh
src/include/openmp/: CSR.h  HLL.h  Serial.h  computeOpenMP.h
src/openmp/: CMakeLists.txt  computeOpenMP.c
src/openmp/product/: CSR.c  HLL.c  Serial.c  openmpCSR.c  openmpHLL.c  serialProduct.c
src/preprocessing/: CMakeLists.txt  matrixPreProcessing.c  mmio.c  preprocessing.c
src/product/: openmpCSR.c  openmpHLL.c  openmpProduct.c  serialProduct.c  utilsProduct.c
src/utils/: CMakeLists.txt  checkResultVector.c  createVector.c  createVectorUtil.c  fileUtils.c  flops.c  matricDealloc.c  matricFree.c  matrixBalance.c  matrixFree.c  matrixPrint.c  mtxBalance.c  mtxFree.c  mtxPrint.c  performance.c
